# quickshell

./: .gitignore  AGENTS.md  AppShell.qml  README.md  demo.qml  smoke_system.qml
.marscode/: deviceInfo.json
Common/: Animations.qml  Appearance.qml  IconResolver.qml  KeystoneMotion.qml  Paths.qml  Sizes.qml  WidgetState.qml
Common/functions/: IconResolver.js  SystemFormat.js
Components/: MaterialSymbol.qml
Modules/Bar/: Bar.qml
Modules/ControlCenter/: BezierCurveEditor.qml  ControlCenterWindow.qml  CursorThemeSelect.qml  GeneralPage.qml  KeystonePage.qml  MaterialSlider.qml  MiniMaterialWaveLine.qml  SplitMenuButton.qml  ThemePage.qml  WallpaperColorPicker.qml  WallpaperFileBrowser.qml  WallpaperPage.qml  WeatherApiSettings.qml  WeatherPage.qml
Modules/DynamicIsland/: DynamicIsland.qml
Modules/FilePicker/: FilePickerWindow.qml
Modules/Keystone/: Keystone.qml
Modules/Launcher/: AppPage.qml  WallpaperPage.qml  WindowPage.qml
Modules/Lock/: LockContent.qml
Modules/QuickSettings/: QuickSettingsSurface.qml  QuickSliders.qml
Services/: AvatarService.qml  BluetoothService.qml  Brightness.qml  Hyprsunset.qml  InfoDrawerState.qml  PersonalizationConfig.qml  QuickToggleConfig.qml  RecordingService.qml  SystemMonitorService.qml  ThemeService.qml  TimerService.qml  TodoService.qml  TrayService.qml  UiPreferences.qml  Volume.qml  Wlsunset.qml
core/: CMakeLists.txt
core/plugin/weathermap/: CMakeLists.txt
core/plugin/weathermap/src/: weather_map_plugin.cpp  weather_map_plugin.h
docs/: sysmon-schema-v1.md  system-monitor-material3-audit.md
(+168 files in other folders)
